--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,48 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.App {
+  background-color: #212121;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+}
+
+.Login {
+  background-color: blanchedalmond;
+  height: 250px;
+  width: 250px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: 1px solid black;
+}
+
+form{
+  margin: 10px;
+}
+
+input {
+  outline: none;
+  border: 1px solid black;
+  text-indent: 2px;
+}
+
+#submit {
+  border: 1px solid black;
+  padding: 2px 6px;
+}
+#submit:hover {
+  border: 1px solid rgb(4, 255, 247);
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+#hideBtn {
+  cursor: default;
+}
