--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -50,12 +50,12 @@ input {
 }
 
 #submit {
-  border: 1px solid black;
+  border: 1px solid #212121;
   padding: 2px 6px;
 }
 #submit:hover {
-  border: 1px solid rgb(4, 255, 247);
-  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid black;
+  background-color: azure;
 }
 
 #hideBtn {
